Fix hero overflow

--- a/src/components/layout/Sections/Hero/Hero.module.scss
+++ b/src/components/layout/Sections/Hero/Hero.module.scss
@@ -14,7 +14,7 @@
     height: 85%;
     object-fit: cover;
     overflow: hidden;
-    position: fixed;
+    // position: fixed;
     top: 0;
     width: 100%;
     z-index: -2;
